--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.0.5"
+    "@tailwindcss/forms": "^0.2.1",
+    "axios": "^0.21.1",
+    "vue": "^3.0.5",
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.1.2",
@@ -18,6 +21,6 @@
     "postcss": "^8.2.4",
     "tailwindcss": "^2.0.2",
     "typescript": "^4.1.3",
-    "vite": "^2.0.0-beta.50"
+    "vite": "^2.0.0-beta.69"
   }
 }
